--- a/CP380-B3-BlockBlazor/Pages/Blocks.razor
+++ b/CP380-B3-BlockBlazor/Pages/Blocks.razor
@@ -2,6 +2,7 @@
 @using CP380_B1_BlockList.Models
 @using CP380_B3_BlockBlazor.Data
 @inject BlockService blockService
+@inject MiningService miningService
 <!-- TODO: Add using and inject statements -->
 
 <h3>Blocks</h3>
@@ -22,7 +23,7 @@ else
                         - the nonce
                         - the previous hash
           -->
-         @{ var position = 0;}
+        @{ var position = 0;}
         @foreach (var block in blocklist)
         {
             <div class="card" style="width: 24rem;">
@@ -41,10 +42,20 @@ else
 
 @code {
     IEnumerable<Block> blocklist;
-
+    Block block;
     protected override async Task OnInitializedAsync()
     {
         // TODO: fetch blocks from the BlockService
+
         blocklist = await blockService.GetBlocksAsync();
+        block = await miningService.MineBlock();
     }
+    private async Task HandleValidSubmit()
+    {
+
+        var res = await blockService.SubmitNewBlockAsync(block);
+        blocklist = await blockService.GetBlocksAsync();
+
+    }
+
 }
